;;;; -*- coding: utf-8; fill-column: 78 -*-

changes relative to sbcl-1.3.3:
  * bug fix: SB-EVAL does not signal an error for (THE KEYWORD :FOO)
  * enhancement: who-sets and who-references work on DEFGLOBAL. (lp#1552997)

changes in sbcl-1.3.3 relative to sbcl-1.3.2:
  * enhancement: warn about argument mismatch for functions passed as
    arguments to other functions (e.g. REDUCE, MAP) at compile-time.
  * optimization: functions accepting other functions (e.g. REDUCE, FIND) can
    now be constant-folded if all function arguments are declared as foldable.
  * optimization: improved logical operations on integers of unknown type.
  * bug fix: exception handling no longer leaks memory on OS X. (lp#326238)

changes in sbcl-1.3.2 relative to sbcl-1.3.1:
  * enhancement: {READ,WRITE}-SEQUENCE are much faster for some combinations
    of short sequences and stream types
  * enhancement: MAKE-LIST's result can be stack-allocated on x86-64
  * bug fix: WRITE-SEQUENCE no longer fails to write lists containing integers
    to bivalent streams
  * bug fix: LOGTEST (and hence ODDP) no longer conses when given fixnum
    arguments and small bit positions.  (lp#1277690)
  * bug fix: READ-FROM-STRING compiler-macro does not permute its arguments
  * bug fix: DEFUN of a function name that collides with a system-generated
    structure accessor does not confuse the runtime. (lp#540063)
  * bug fix: heap corruption from miscompiled RESTART-BIND. (lp#1530390)

changes in sbcl-1.3.1 relative to sbcl-1.3.0:
  * enhancement: SB-THREAD support for ARM64.
  * enhancement: compiling an out-of-line DEFSTRUCT constructor call
    will warn if a defaulted value is incompatible with its slot type.
  * enhancement: a local INLINE declaration on a structure constructor
    will work as intended, subject to any other factors that inhibit
    inlining, even if the DEFSTRUCT was not itself within a global
    INLINE proclamation for the named constructor